--- a/views/allevent.ejs
+++ b/views/allevent.ejs
@@ -63,8 +63,14 @@
                             <i class="fas fa-calendar-plus"></i>
                             <span class="nav-label">會員管理</span>
                         </a>
-              <!--      </li>
+                    </li>
                     <li class="has-submenu">
+                        <a href="feedbackpage">
+                            <i class="fas fa-book-medical"></i>
+                            <span class="nav-label">會員回報訊息</span>
+                        </a>
+                    </li>
+                    <!--<li class="has-submenu">
                         <a href="#" class="has-arrow mm-collapsed">
                             <i class="fas fa-book-medical"></i>
                             <span class="nav-label">Prescriptions</span>
