--- a/views/empindex.ejs
+++ b/views/empindex.ejs
@@ -69,13 +69,14 @@
                             <i class="fas fa-calendar-plus"></i>
                             <span class="nav-label">會員管理</span>
                         </a>
-                    </li>
-        <!--            <li class="has-submenu">
-                        <a href="#" class="has-arrow mm-collapsed">
+                    
+                    <li class="has-submenu">
+                        <a href="feedbackpage">
                             <i class="fas fa-book-medical"></i>
-                            <span class="nav-label">Prescriptions</span>
+                            <span class="nav-label">會員回報訊息</span>
                         </a>
-                        <ul class="list-unstyled mm-collapse">
+                    </li>
+                <!--        <ul class="list-unstyled mm-collapse">
                             <li><a href="new-prescription.html">New Prescription</a></li>
                             <li><a href="all-prescriptions.html">All Prescriptions</a></li>
                         </ul>
