--- a/views/adopterdetail.ejs
+++ b/views/adopterdetail.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>會員管理</title>
+    <title>領養人資訊</title>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
     <!-- Base Styling  -->
@@ -328,7 +328,7 @@
                     <div class="row page-titles mx-0">
                         <div class="col-sm-6 p-md-0">
                             <div class="welcome-text">
-                                <h4 class="text-primary">會員管理</h4>
+                                <h4 class="text-primary">領養人資訊</h4>
                                 <p class="mb-0">後台管理</p>
                             </div>
                         </div>
